--- a/sass/regions/_regiomino.scss
+++ b/sass/regions/_regiomino.scss
@@ -51,41 +51,45 @@
         -webkit-transform: rotate(30deg);
     }
     
-    .service-icon .circle.outer:hover .service-icon-holder.left, .service-icon .circle.outer.infocus .service-icon-holder.left {
-        left: 9px;
-    }
-    .service-icon .circle.outer:hover .service-icon-holder.right, .service-icon .circle.outer.infocus .service-icon-holder.right {
-        right: 8px;
-    }
-
-    .service-icon-holder.semicircle.left {
-        border-radius: 90px 0 0 90px;
--moz-border-radius: 90px 0 0 90px;
--webkit-border-radius: 90px 0 0 90px;
-left: -50px;
-top: -6px;
-    }
-    .service-icon-holder.semicircle.right {
-        border-radius: 0 90px 90px 0;
--moz-border-radius: 0 90px 90px 0;
--webkit-border-radius: 0 90px 90px 0;
-right: -50px;
-top: 16px;
-    }
+ 
     .theicon {
         height: 100%;
-        line-height: 112px;
         position: relative;
-        text-align: center;
         width: 100%;
         z-index: 10;
+        
+        &:after {
+            font-family: 'biz-icons';
+            font-size: 20px;
+            color: $heading-black;
+            font-size: 34px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin-left: -17px;
+            margin-top: -17px;
+            
+        }
+        
+        &.software:after {
+            content: "\e60d";
+        }
+        
+        &.vermittlung:after {
+            content: "\e60f";
+        }
+        
+        &.regional:after {
+            content: "\e60e";
+        }
+        
     }
     
     .service-icon .circle.outer {
-	border-color: $heading-black;
-	}
-	.service-icon .triangle {
-	border-color: $heading-black transparent transparent;
-	}
+        border-color: $heading-black;
+    }
+    .service-icon .triangle {
+        border-color: $heading-black transparent transparent;
+    }
     
 }
