--- a/sass/global/modules/_parallax.scss
+++ b/sass/global/modules/_parallax.scss
@@ -95,3 +95,8 @@
     background-image: url('../images/parallax/3.jpg');
     
 }
+
+#parallax4 {
+    background-image: url('../images/parallax/4.jpg');
+    
+}
