--- a/sass/global/elements/_elements.scss
+++ b/sass/global/elements/_elements.scss
@@ -15,6 +15,8 @@ a {
     @include box-shadow(rgba($black, 0.9) 0 0px 13px 0 );
     position: relative;
     z-index: 20;
+    padding-top: 50px;
+    padding-bottom: 140px;
 }
 
 // Typo
@@ -70,10 +72,7 @@ h5 {
 		.title, .subtitle {
 		text-align: center;
 		}
-		.title {
-		padding: 106px 0 0;
-               
-		}
+		 
                 
  // Separator & Bullets              
 .line {
@@ -107,7 +106,4 @@ h5 {
     -webkit-transform:rotate(360deg);
     border-style: inset;
 }
-.column-wrapper {
-    padding: 66px 0 56px;
-    text-align: center;
-}
+
