--- a/sass/global/modules/_parallax.scss
+++ b/sass/global/modules/_parallax.scss
@@ -1,4 +1,3 @@
-/*** TARA IMAGE BACKGROUND MODULE ***/
 
 .image-holder {
     height: 440px;
@@ -14,9 +13,8 @@
         min-height: 688px;
     }
     
-    
     .parallax-content {
-            padding-top: 60px;
+            padding-top: 42px;
             
             h1 {
                 font-size: 32px;
@@ -25,18 +23,18 @@
     }
 }
 
-
-	 
 #parallax1 {
     background-image: url('../images/parallax/1.jpg');
     
-        
-
+     .parallax-content {
+        @include bp(1263px) {
+            padding-top: 0px;
+        }
+     }
     
     .partnerOuter {
         text-align: center;
     }
-    
     
     div.partner-wrapper {
           display: inline-block;
@@ -54,6 +52,7 @@
             
             img {
                 vertical-align: middle;
+                 
             }
         }
     }
