--- a/sass/global/modules/_title.scss
+++ b/sass/global/modules/_title.scss
@@ -3,6 +3,7 @@
     text-align: center;
     
     h1 {
+        font-family: 'Dosis';
         margin: 0 0 15px 0;
         color: $brand-green
     }
