--- a/sass/global/elements/_elements.scss
+++ b/sass/global/elements/_elements.scss
@@ -3,7 +3,11 @@ body {
     padding-left: 260px;
     font-family : "Roboto", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 400;
+   
     padding-right: 20px;
+     .mobile & {
+        padding-right: 0px;
+    }
 }
 
 a {
