--- a/sass/global/elements/_elements.scss
+++ b/sass/global/elements/_elements.scss
@@ -1,10 +1,21 @@
 /* Leave space for the fixed navigation above first item */
 body {
     padding-left: 260px;
+    @include bp(900px) {
+        padding-left: 230px;
+    }
+        
+    @include bpm(767px) {
+        padding-left:0px;
+        
+    }
     font-family : "Roboto", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 400;
    
     padding-right: 20px;
+    @include bpm(767px) {
+        padding-right: 0px;
+    }
      .mobile & {
         padding-right: 0px;
     }
@@ -22,6 +33,11 @@ a {
     z-index: 20;
     padding-top: 50px;
     padding-bottom: 140px;
+    @include bpm(767px) {
+            padding-top: 58px;
+            @include box-shadow(none);
+            padding-bottom: 0px;
+        }
 }
 
 // Typo
@@ -38,14 +54,7 @@ ul {
     }
 }
 		 
-h1 {
-    font-weight: bold;
-    font-family: 'Dosis' sans-serif;
-}
 
-h1 {
-    font-size: 60px;	
-}
 
 h2 {
     font-size: 45px;
