--- a/sass/global/modules/_benefits.scss
+++ b/sass/global/modules/_benefits.scss
@@ -39,11 +39,17 @@
         .item-wrapper {
             @include box-sizing (border-box);
             padding-top: 20px;
-            padding-left:8.69%;
+            padding-left:40px;
             padding-bottom: 40px;
             background: #ffffff;
+            @include bp(900px) {
+                opacity: 0.9;
+            }
             position: relative;
             min-height: 560px;
+            @include bp(900px) {
+                min-height: 0px;
+            }
             
             &:before {
                 content: "";
@@ -68,7 +74,6 @@
                 bottom: 0px;
                 background-image: linear-gradient(rgba(255, 255, 255, 0) 10%,#FFF 100%);
             }
-            
         }
         
         .benefit {
