--- a/sass/global/modules/_title.scss
+++ b/sass/global/modules/_title.scss
@@ -5,7 +5,16 @@
     h1 {
         font-family: 'Dosis';
         margin: 0 0 15px 0;
-        color: $brand-green
+        color: $brand-green;
+        font-size:   60px;
+        font-weight: 700;
+        @include bp(900px) {
+            font-size:   50px;
+        }
+
+h1 {
+    font-size: 60px;	
+}
     }
     
     .subtitle {
