--- a/sass/regions/_kontakt.scss
+++ b/sass/regions/_kontakt.scss
@@ -124,7 +124,7 @@
         
         p {
             margin-top: 0;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
             @include bp(1217px) {
             margin-bottom: 14px;
             }
@@ -162,6 +162,10 @@
         
         h4 {
             font-size: 20px;
+            @include bp(952px) {
+                font-size: 16px;
+            }
+
             font-weight: 700;
             margin-top: 0;
             color: $paragraph-black;
