--- a/sass/global/elements/_grid.scss
+++ b/sass/global/elements/_grid.scss
@@ -7,47 +7,50 @@
 
     .container                                  { position: relative; max-width: 960px; width:81%; margin: 0 auto; padding: 0; }
     .container .column,
-    .container .columns                         { float: left; display: inline; margin-left: 10px; margin-right: 10px; }
-    .row                                        { margin-bottom: 20px; }
+    .container .columns                         { float: left; display: inline; margin-left: 10px; margin-right: 10px;
+    
+    @include bpm(767px) {
+           margin-left: 0px; margin-right: 0px;
+        }
+    }
+   
 
     /* Nested Column Classes */
     .column.alpha, .columns.alpha               { margin-left: 0; }
     .column.omega, .columns.omega               { margin-right: 0; }
 
-    /* Base Grid */
-    .container .one.column,
-    .container .one.columns                     { width: 40px;  }
-    .container .two.columns                     { width: 100px; }
-    .container .three.columns                   { width: 160px; }
-    .container .four.columns                    { width: 220px; }
-    .container .five.columns                    { width: 29.12% }
-    .container .six.columns                     { width: 340px; }
-    .container .seven.columns                   { width: 400px; }
-    .container .eight.columns                   { width: 47.92%;
-    
-    @include bp(900px) {
-               width: 68%;
-            }}
    
-
-    /* Offsets */
-   
-    .container .offset-by-eight                 {
-        padding-left: 50%;
+    .container .eight.columns   {
+        width: 47.92%;
         @include bp(900px) {
-           padding-left: 30%;
+            width: 68%;
+        } 
+            
+        @include bpm(767px) {
+           width: 100%;
         }
     }
    
-
+    /* Offsets */
+   
+    .container .offset-by-eight {
+        padding-left: 50%;
+        @include bp(900px) {
+            padding-left: 30%;
+        }
+        
+        @include bpm(767px) {
+            padding-left: 0%;
+        }
+    }
+   
 
 @media only screen and (max-width: 980px) {
     
     .container {
         width: 90%;
     }
-    
-    }
+}
 
  
 
